--- a/templates/pages/scraping/proses_id.html
+++ b/templates/pages/scraping/proses_id.html
@@ -25,7 +25,7 @@
                 <tr>
                   <td>
                     <div class="d-flex flex-column justify-content-center">
-                      <h6 class="mb-0 text-sm">{{ comment.number }}</h6>
+                      <h6 class="mb-0 text-sm">{{ forloop.counter }}</h6>
                     </div>
                   </td>
                   <td>
