--- a/templates/layout/sidebar.html
+++ b/templates/layout/sidebar.html
@@ -35,11 +35,19 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link text-white " href="{% url 'scraping' %}">
+    <a class="nav-link text-white " href="{% url 'kategori' %}">
         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
           <i class="material-icons opacity-10">table_view</i>
         </div>
-      <span class="nav-link-text ms-1">Text Processing</span>
+      <span class="nav-link-text ms-1">Data Kategori</span>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-white " href="{% url 'subkategori' %}">
+        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+          <i class="material-icons opacity-10">table_view</i>
+        </div>
+      <span class="nav-link-text ms-1">Data Subkategori</span>
     </a>
   </li>
   
